--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="basic-addon1">Angle of incline</span>
           </div>
-          <input type="text" class="form-control" placeholder="15" aria-label="angle" aria-describedby="basic-addon1">
+          <input id="angle-input" type="number" class="form-control" placeholder="15" aria-label="angle" aria-describedby="basic-addon1">
           <div class="input-group-append">
             <span class="input-group-text" id="basic-addon1">degrees</span>
           </div>
@@ -38,7 +38,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="basic-addon1">Coefficient of Friction</span>
           </div>
-          <input type="text" class="form-control" placeholder="0.3" aria-label="friction" aria-describedby="basic-addon1">
+          <input id= "coeeficient-input" type="number" class="form-control" placeholder="0.3" aria-label="friction" aria-describedby="basic-addon1">
         </div>
       </div>
     </div>
