Basic set up for init() and update() functions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <canvas id="main" class="canvas-style" height="700"></canvas>
 
       <div class="control area options">
-        <button onclick="logic()" type="button" class="btn btn-primary start_btn">Start</button>
+        <button onclick="draw()" type="button" class="btn btn-primary start_btn">Start</button>
         <p>Options</p>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
