--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img id="scale" class="asset" src="assets/scale.png">
       <img id="pivot" class="asset" src="assets/pivot.png">
       <img id="block" class="asset" src="assets/block.png">
-      <canvas>
+      <canvas id="main" class="canvas-style" height="700">
 
       </canvas>
     </div>
