--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <canvas id="main" class="canvas-style">
 
     </canvas>
+
+    <div class="shape">
+
+    </div>
 	<div class="container">
 		<div class="canvas-div">
 			<!-- <img id="bigblock" class="asset" src="assets/big-block.png">
