--- a/index.html
+++ b/index.html
@@ -9,29 +9,20 @@
 	 crossorigin="anonymous">
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-	<div class="navbar navbar-expand-lg navbar-dark">
+  <!--
+  <div class="navbar navbar-expand-lg navbar-dark">
 		<h1 class="navbar-brand">
-			<!-- Title of Website -->
+
 			Incline Ramp Simulation
 		</h1>
 	</div>
     <canvas id="main" class="canvas-style">
 
     </canvas>
-
-    <div class="shape">
-
-    </div>
 	<div class="container">
 		<div class="canvas-div">
-			<!-- <img id="bigblock" class="asset" src="assets/big-block.png">
-      <img id="protractor" class="asset" src="assets/protractor.png">
-      <img id="smallblock" class="asset" src="assets/small-block.png">
-      <img id="scale" class="asset" src="assets/scale.png">
-      <img id="pivot" class="asset" src="assets/pivot.png">
-      <img id="block" class="asset" src="assets/block.png"> -->
+
 
     </div>
 
@@ -81,9 +72,8 @@
       </div>
     </div>
   </div>
-
-  <script src="script.js">
-  </script>
-
+  -->
 </body>
+<script src="./libraries/matter.js"></script>
+<script src="engine.js"></script>
 </html>
