--- a/index.html
+++ b/index.html
@@ -10,22 +10,15 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <!--
   <div class="navbar navbar-expand-lg navbar-dark">
 		<h1 class="navbar-brand">
-
 			Incline Ramp Simulation
 		</h1>
 	</div>
-    <canvas id="main" class="canvas-style">
+    <!-- <canvas id="main" class="canvas-style">
 
-    </canvas>
+    </canvas> -->
 	<div class="container">
-		<div class="canvas-div">
-
-
-    </div>
-
     <div class="card settings">
       <div class="card-body">
         <h2 class="card-title">Settings</h2>
@@ -72,7 +65,6 @@
       </div>
     </div>
   </div>
-  -->
 </body>
 <script src="./libraries/matter.js"></script>
 <script src="engine.js"></script>
