--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
       </div>
     </div>
   </div>
+  <div id="engine">
+
+  </div>
 </body>
 <script src="./libraries/matter.js"></script>
 <script src="engine.js"></script>
