--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="col-sm-6">
             </div>
             <div class="col-sm-6">
-              <button onclick="physicsWorld()" class="btn btn-success" type="submit" id="custom">Start</button>
+              <button onclick="updateRamp()" type="button" class="btn btn-success" id="custom">Start</button>
             </div>
           </div>
         </form>
